[project]
name = "scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pulp>=2.9.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "torch-geometric>=2.6.1",
    "torch>=2.5.1",
]
